--- a/debian/rules
+++ b/debian/rules
@@ -2,3 +2,6 @@
 
 %:
 	dh $@ --with python2 --buildsystem=python_distutils
+
+override_dh_auto_test:
+	PYTHONPATH=src python -m unittest discover src/cm_api_tests
